--- a/application/admin/view2/repair/problems.html
+++ b/application/admin/view2/repair/problems.html
@@ -43,9 +43,9 @@
 						<th align="left" abbr="ac_id" axis="col4" class="">
 							<div style="text-align: center; width: 50px;" class="">问题类型</div>
 						</th>
-						<th align="left" abbr="ac_id" axis="col4" class="">
-							<div style="text-align: center; width: 100px;" class="">服务费用</div>
-						</th>
+<!-- 						<th align="left" abbr="ac_id" axis="col4" class=""> -->
+<!-- 							<div style="text-align: center; width: 100px;" class="">服务费用</div> -->
+<!-- 						</th> -->
 						<th align="left" axis="col1" class="handle">
 							<div style="text-align: center; width: 120px;">操作</div>
 						</th>
@@ -84,9 +84,9 @@
 							<td align="left" class="">
 								<div style="text-align: center; width: 50px;"><if $vo.type == 1>电脑<else />手机</if></div>
 							</td>
-							<td align="left" class="">
-								<div style="text-align: center; width: 100px;">{$vo.price}</div>
-							</td>
+<!-- 							<td align="left" class=""> -->
+<!-- 								<div style="text-align: center; width: 100px;">{$vo.price}</div> -->
+<!-- 							</td> -->
 							<td align="left" class="handle">
 								<div style="text-align: left; width: 120px; max-width:120px;">
 									<a class="btn blue" href="{:U('Repair/problems_repair_info',array('act'=>'edit','problems_id'=>$vo['problems_id']))}"><i class="fa fa-pencil-square-o"></i>编辑</a>
