--- a/application/admin/view2/repair/problems_repair_info.html
+++ b/application/admin/view2/repair/problems_repair_info.html
@@ -40,16 +40,16 @@
                     <p class="notic">维修类型</p>
                 </dd>
             </dl>
-             <dl class="row">
-                <dt class="tit">
-                    <label><em>*</em>服务费用</label>
-                </dt>
-                <dd class="opt">
-                    <input type="text" name="price" id="price" value="{$info.price}" class="input-txt">
-                    <span class="err" id="err_title"></span>
-                    <p class="notic">服务费用</p>
-                </dd>
-            </dl>
+<!--              <dl class="row"> -->
+<!--                 <dt class="tit"> -->
+<!--                     <label><em>*</em>服务费用</label> -->
+<!--                 </dt> -->
+<!--                 <dd class="opt"> -->
+<!--                     <input type="text" name="price" id="price" value="{$info.price}" class="input-txt"> -->
+<!--                     <span class="err" id="err_title"></span> -->
+<!--                     <p class="notic">服务费用</p> -->
+<!--                 </dd> -->
+<!--             </dl> -->
             <div class="bot"><a onclick="verifyForm()" class="ncap-btn-big ncap-btn-green">确认提交</a></div>
         </div>
     </form>
