下单短信提醒

--- a/application/admin/view2/system/sms.html
+++ b/application/admin/view2/system/sms.html
@@ -68,6 +68,15 @@
                 </dd>
             </dl>
             <dl class="row">
+                <dt class="tit">
+                    <label for="sms_admin_phone">下单通知电话</label>
+                </dt>
+                <dd class="opt">
+                    <input id="sms_admin_phone" name="sms_admin_phone" value="{$config.sms_admin_phone}" class="input-txt" type="text"/>
+                    <p class="notic">下单通知电话,多个电话用','隔开</p>
+                </dd>
+            </dl>
+            <dl class="row">
                 <dt class="tit">用户注册时</dt>
                 <dd class="opt">
                     <div class="onoff">
