--- a/application/admin/view2/repair/customer_service_info.html
+++ b/application/admin/view2/repair/customer_service_info.html
@@ -119,7 +119,7 @@
                     </if>
                 </dd>
             </dl> 
-            <dl class="row">
+<!--             <dl class="row">
                 <dt class="tit">
                     <label><em>*</em>状态</label>
                 </dt>
@@ -130,7 +130,7 @@
                     </select>
                     <p class="notic">状态</p>
                 </dd>
-            </dl>
+            </dl> -->
             <div class="bot"><a onclick="verifyForm()" class="ncap-btn-big ncap-btn-green">确认提交</a></div>
         </div>
     </form>
