--- a/application/admin/view2/repair/index.html
+++ b/application/admin/view2/repair/index.html
@@ -53,6 +53,9 @@
 							<div style="text-align: center; width: 200px;" class="">地址</div>
 						</th>
 						<th align="center" abbr="article_time" axis="col6" class="">
+							<div style="text-align: center; width: 200px;" class="">详细地址</div>
+						</th>
+						<th align="center" abbr="article_time" axis="col6" class="">
 							<div style="text-align: center; width: 150px;" class="">申请时间</div>
 						</th>
 						<th align="center" abbr="article_time" axis="col6" class="">
@@ -62,7 +65,7 @@
 							<div style="text-align: center; width: 100px;" class="">预约收费</div>
 						</th>
 						<th align="center" abbr="article_time" axis="col6" class="">
-							<div style="text-align: center; width: 50px;" class="">是否处理</div>
+							<div style="text-align: center; width: 50px;" class="">已解决</div>
 						</th>
 						<th align="left" axis="col1" class="handle">
 							<div style="text-align: center; width: 120px;">操作</div>
@@ -109,7 +112,10 @@
 								<div style="text-align: center; width: 150px;">{$vo.name}</div>
 							</td>
 							<td align="left" class="">
-								<div style="text-align: center; width: 200px;">{$vo.address}</div>
+								<div style="text-align: center; width: 200px;"><a href="{:U('admin/repair/address_info',array('type'=>$type,'data_id'=>$vo.repair_pcid))}">{$vo.address1}</div>
+							</td>
+							<td align="left" class="">
+								<div style="text-align: center; width: 200px;"><a href="{:U('admin/repair/address_info',array('type'=>$type,'data_id'=>$vo.repair_pcid))}">{$vo.address2}</div>
 							</td>
 							<td align="left" class="">
 								<div style="text-align: center; width: 150px;">{$vo.addtime|date="Y-m-d H:i:s",###}</div>
@@ -121,7 +127,7 @@
 								<div style="text-align: center; width: 100px; color:red">{$vo.price|default="0.00"}</div>
 							</td>
 							<td align="left" class="">
-								 <div style="text-align: center; width: 70px;">
+								 <div style="text-align: center; width: 50px;">
 									<if $vo.status == 1>
 										<span class="yes" onClick="changeTableVal('repair_pc','repair_pcid','{$vo.repair_pcid}','status',this)" ><i class="fa fa-check-circle"></i>是</span>
 	<!-- 									<div style="text-align: center; width: 50px; color:green;" >已处理</div> -->
