--- a/application/admin/view2/repair/mobile_repair.html
+++ b/application/admin/view2/repair/mobile_repair.html
@@ -56,19 +56,22 @@
 							<div style="text-align: center; width: 80px;" class="">手机型号</div>
 						</th>
 						<th align="center" abbr="article_time" axis="col6" class="">
-							<div style="text-align: center; width: 200px;" class="">地址</div>
+							<div style="text-align: center; width: 150px;" class="">地址</div>
+						</th>
+						<th align="center" abbr="article_time" axis="col6" class="">
+							<div style="text-align: center; width: 150px;" class="">详细地址</div>
 						</th>
 						<th align="center" abbr="article_time" axis="col6" class="">
 							<div style="text-align: center; width: 150px;" class="">申请时间</div>
 						</th>
 						<th align="center" abbr="article_time" axis="col6" class="">
-							<div style="text-align: center; width: 200px;" class="">备注</div>
+							<div style="text-align: center; width: 150px;" class="">备注</div>
 						</th>
 						<th align="center" abbr="article_time" axis="col6" class="">
-							<div style="text-align: center; width: 100px;" class="">预约收费</div>
+							<div style="text-align: center; width: 50px;" class="">预计收费</div>
 						</th>
 						<th align="center" abbr="article_time" axis="col6" class="">
-							<div style="text-align: center; width: 50px;" class="">是否处理</div>
+							<div style="text-align: center; width: 50px;" class="">已解决</div>
 						</th>
 						<th align="left" axis="col1" class="handle">
 							<div style="text-align: center; width: 120px;">操作</div>
@@ -121,19 +124,22 @@
 								<div style="text-align: center; width: 80px;">{$vo.product_name}</div>
 							</td>
 							<td align="left" class="">
-								<div style="text-align: center; width: 200px;">{$vo.address}</div>
+								<div style="text-align: center; width: 150px;" title="{$vo.address1}"><a href="{:U('admin/repair/address_info',array('type'=>$type,'data_id'=>$vo.repair_mid))}">{$vo.address1}</a></div>
+							</td>
+							<td align="left" class="">
+								<div style="text-align: center; width: 150px;" title="{$vo.address2}"><a href="{:U('admin/repair/address_info',array('type'=>$type,'data_id'=>$vo.repair_mid))}">{$vo.address2}</div>
 							</td>
 							<td align="left" class="">
 								<div style="text-align: center; width: 150px;">{$vo.addtime|date="Y-m-d H:i:s",###}</div>
 							</td>
 							<td align="left" class="">
-								<div style="text-align: center; width: 200px;">{$vo.des}</div>
+								<div style="text-align: center; width: 150px;" title="{$vo.des}">{$vo.des}</div>
 							</td>
 							<td align="left" class="">
-								<div style="text-align: center; width: 100px; color:red">{$vo.price|default="0.00"}</div>
+								<div style="text-align: center; width: 50px; color:red">{$vo.price|default="0.00"}</div>
 							</td>
 							<td align="left" class="">
-								 <div style="text-align: center; width: 70px;">
+								 <div style="text-align: center; width: 50px;">
 									<if $vo.status == 1>
 										<span class="yes" onClick="changeTableVal('repair_mobile','repair_mid','{$vo.repair_mid}','status',this)" ><i class="fa fa-check-circle"></i>是</span>
 	<!-- 									<div style="text-align: center; width: 50px; color:green;" >已处理</div> -->
