--- a/application/admin/view2/repair/pc_repair_info.html
+++ b/application/admin/view2/repair/pc_repair_info.html
@@ -42,9 +42,19 @@
                     <label><em>*</em>取货地址</label>
                 </dt>
                 <dd class="opt">
-                    <input type="text" name="address" id="address" value="{$info.address}" class="input-txt">
+                    <input type="text" name="address" id="address1" value="{$info.address1}" class="input-txt">
                     <span class="err" id="err_title"></span>
                     <p class="notic">请填写取货地址</p>
+                </dd>
+            </dl>
+            <dl class="row">
+                <dt class="tit">
+                    <label><em>*</em>取货详细地址</label>
+                </dt>
+                <dd class="opt">
+                    <input type="text" name="address" id="address2" value="{$info.address2}" class="input-txt">
+                    <span class="err" id="err_title"></span>
+                    <p class="notic">请填写取货详细地址</p>
                 </dd>
             </dl>
             <dl class="row">
