--- a/application/admin/view2/repair/customer_service.html
+++ b/application/admin/view2/repair/customer_service.html
@@ -34,7 +34,7 @@
 			        <!--排序规则-->
 			        <input type="hidden" name="orderby1" value="goods_id" />
 			        <input type="hidden" name="orderby2" value="desc" />
-			      <input type="text" size="30" name="key_word" class="qsbox" placeholder="手机号/用户名/商品名">
+			      <input type="text" size="30" name="key_word" class="qsbox" placeholder="手机号/用户名/商品名" value="{$search}">
 			      <input type="button"  class="btn search" value="搜索">
 			    </div>
 			  </div>
