--- a/application/admin/view2/system/shop_info.html
+++ b/application/admin/view2/system/shop_info.html
@@ -69,6 +69,27 @@
             </dl>
             <dl class="row">
                 <dt class="tit">
+                    <label for="mobile_price">手机报价图片</label>
+                </dt>
+                <dd class="opt">
+                    <div class="input-file-show">
+                        <span class="show">
+                            <a id="img_b" class="nyroModal" rel="gal" href="{$config.mobile_price}">
+                                <i id="img_c" class="fa fa-picture-o" onmouseover="layer.tips('<img src={$config.mobile_price}>',this,{tips: [1, '#fff']});" onmouseout="layer.closeAll();"></i>
+                            </a>
+                        </span>
+                        <span class="type-file-box">
+                            <input type="text" id="mobile_price" name="mobile_price" value="{$config.mobile_price}" class="type-file-text">
+                            <input type="button" name="button" id="button1" value="选择上传..." class="type-file-button">
+                            <input class="type-file-file" onClick="GetUploadify(1,'','logo','call_back')" size="30" hidefocus="true" nc_type="change_site_logo" title="点击前方预览图可查看大图，点击按钮选择文件并提交表单后上传生效">
+                        </span>
+                    </div>
+                    <span class="err"></span>
+                    <p class="notic">手机报价图片</p>
+                </dd>
+            </dl>
+            <dl class="row">
+                <dt class="tit">
                     <label for="store_title">网站标题</label>
                 </dt>
                 <dd class="opt">
@@ -194,6 +215,13 @@
         $("#store_logo").val(fileurl_tmp);
         $("#img_a").attr('href', fileurl_tmp);
         $("#img_i").attr('onmouseover', "layer.tips('<img src="+fileurl_tmp+">',this,{tips: [1, '#fff']});");
+    }
+
+    function call_back(fileurl_tmp)
+    {
+        $("#mobile_price").val(fileurl_tmp);
+        $("#img_b").attr('href', fileurl_tmp);
+        $("#img_c").attr('onmouseover', "layer.tips('<img src="+fileurl_tmp+">',this,{tips: [1, '#fff']});");
     }
 </script>
 </html>
