--- a/application/admin/view2/repair/address_info.html
+++ b/application/admin/view2/repair/address_info.html
@@ -29,7 +29,7 @@ p{
     min-height:100%;
 }
 </style>
-<script charset="utf-8" src="http://map.qq.com/api/js?v=2.exp"></script>
+<script charset="utf-8" src="http://map.qq.com/api/js?v=2.exp&key=PQKBZ-VCRC6-TJCSQ-EJIGY-ZJXY2-WFFSN"></script>
 <script>
 
 window.onload = function(){
