--- a/application/admin/view2/repair/index.html
+++ b/application/admin/view2/repair/index.html
@@ -38,7 +38,10 @@
 							<div style="width: 24px;"><i class="ico-check"></i></div>
 						</th>
 						<th align="left" abbr="article_title" axis="col3" class="">
-							<div style="text-align: left; width: 70px;" class="">联系人</div>
+							<div style="text-align: left; width: 150px;" class="">预约单号</div>
+						</th>
+						<th align="left" abbr="article_title" axis="col3" class="">
+							<div style="text-align: left; width: 50px;" class="">联系人</div>
 						</th>
 						<th align="left" abbr="ac_id" axis="col4" class="">
 							<div style="text-align: center; width: 80px;" class="">联系电话</div>
@@ -49,26 +52,32 @@
 						<th align="center" abbr="article_show" axis="col5" class="">
 							<div style="text-align: center; width: 150px;" class="">问题描述</div>
 						</th>
-						<th align="center" abbr="article_time" axis="col6" class="">
+						<!-- <th align="center" abbr="article_time" axis="col6" class="">
 							<div style="text-align: center; width: 200px;" class="">地址</div>
-						</th>
+						</th> -->
 						<th align="center" abbr="article_time" axis="col6" class="">
-							<div style="text-align: center; width: 200px;" class="">详细地址</div>
+							<div style="text-align: center; width: 100px;" class="">详细地址</div>
 						</th>
 						<th align="center" abbr="article_time" axis="col6" class="">
 							<div style="text-align: center; width: 150px;" class="">申请时间</div>
 						</th>
 						<th align="center" abbr="article_time" axis="col6" class="">
-							<div style="text-align: center; width: 200px;" class="">备注</div>
+							<div style="text-align: center; width: 100px;" class="">备注</div>
 						</th>
+						<!-- <th align="center" abbr="article_time" axis="col6" class="">
+							<div style="text-align: center; width: 100px;" class="">预计收费</div>
+						</th> -->
 						<th align="center" abbr="article_time" axis="col6" class="">
-							<div style="text-align: center; width: 100px;" class="">预约收费</div>
+							<div style="text-align: center; width: 200px;" class="">放件列表</div>
 						</th>
 						<th align="center" abbr="article_time" axis="col6" class="">
 							<div style="text-align: center; width: 50px;" class="">已解决</div>
 						</th>
+						<th align="center" abbr="article_time" axis="col6" class="">
+							<div style="text-align: center; width: 100px;" class="">已发送取件消息</div>
+						</th>
 						<th align="left" axis="col1" class="handle">
-							<div style="text-align: center; width: 120px;">操作</div>
+							<div style="text-align: center; width: 250px;">操作</div>
 						</th>
 						<th style="width:100%" axis="col7">
 							<div></div>
@@ -100,7 +109,10 @@
 								<div style="width: 24px;"><i class="ico-check"></i></div>
 							</td>
 							<td align="left" class="">
-								<div style="text-align: left; width: 70px;">{$vo.consignee}</div>
+								<div style="text-align: center; width: 150px;">{$vo.weixiu_no}</div>
+							</td>
+							<td align="left" class="">
+								<div style="text-align: center; width: 50px;">{$vo.consignee}</div>
 							</td>
 							<td align="left" class="">
 								<div style="text-align: center; width: 80px;">{$vo.mobile}</div>
@@ -111,20 +123,23 @@
 							<td align="left" class="">
 								<div style="text-align: center; width: 150px;">{$vo.name}</div>
 							</td>
-							<td align="left" class="">
+							<!-- <td align="left" class="">
 								<div style="text-align: center; width: 200px;"><a href="{:U('admin/repair/address_info',array('type'=>$type,'data_id'=>$vo.repair_pcid))}">{$vo.address1}</div>
-							</td>
+							</td> -->
 							<td align="left" class="">
-								<div style="text-align: center; width: 200px;"><a href="{:U('admin/repair/address_info',array('type'=>$type,'data_id'=>$vo.repair_pcid))}">{$vo.address2}</div>
+								<div style="text-align: center; width: 100px;"><a href="{:U('admin/repair/address_info',array('type'=>$type,'data_id'=>$vo.repair_pcid))}">{$vo.address2}</div>
 							</td>
 							<td align="left" class="">
 								<div style="text-align: center; width: 150px;">{$vo.addtime|date="Y-m-d H:i:s",###}</div>
 							</td>
 							<td align="left" class="">
-								<div style="text-align: center; width: 200px;">{$vo.des}</div>
+								<div style="text-align: center; width: 100px;">{$vo.des}</div>
 							</td>
-							<td align="left" class="">
+						<!-- 	<td align="left" class="">
 								<div style="text-align: center; width: 100px; color:red">{$vo.price|default="0.00"}</div>
+							</td> -->
+							<td align="left" class="">
+								<div style="text-align: center; width: 200px;">{$vo.weixiu_list}</div>
 							</td>
 							<td align="left" class="">
 								 <div style="text-align: center; width: 50px;">
@@ -137,10 +152,20 @@
 									</if>
 								</div>
 							</td>
+							<td align="left" class="">
+								 <div style="text-align: center; width: 100px;">
+									<if $vo.status == 1>
+										<span class="yes" ><i class="fa fa-check-circle"></i>是</span>
+									<else />
+										<span class="no" ><i class="fa fa-ban"></i>否</span>
+									</if>
+								</div>
+							</td>
 							<td align="left" class="handle">
-								<div style="text-align: left; width: 120px; max-width:120px;">
+								<div style="text-align: left; width: 250px; max-width:250px;">
 									<a class="btn blue" href="{:U('Repair/pc_repair_info',array('act'=>'edit','repair_pcid'=>$vo['repair_pcid']))}"><i class="fa fa-pencil-square-o"></i>编辑</a>
 									<a class="btn red" href="javascript:void(0)" data-url="{:U('Repair/pc_repair_handle')}" data-id="{$vo.repair_pcid}" onClick="delfun(this)"><i class="fa fa-trash-o"></i>删除</a>
+									<a class="btn green" href="javascript:void(0)" data-url="{:U('Repair/pc_repair_handle')}" data-id="{$vo.repair_pcid}" onClick="delfun(this)"><i class="fa fa-pencil-square-o"></i>发送取件通知</a>
 								</div>
 							</td>
 							<td align="" class="" style="width: 100%;">
